--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,6 +8,12 @@
 
         <title>Test Template for django-downloads</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <style>
+        .container.main {
+            margin-top: 50px;
+            padding-top: 50px;
+        }
+        </style>
     </head>
 
     <body>
@@ -34,7 +40,7 @@
             </div>
         </nav>
 
-        <div class="container">
+        <div class="container main">
 
         {% block content %}
             <h1>Test template for django-downloads</h1>
